# trading-strategy-testing-framework

./: .gitignore  pyproject.toml
resources/context/: session-scratchpad.md
resources/development_plan/: trading_strategy_framework_agile_mvp_plan_20250705.md
resources/prd/: trading_strategy_prd.md
scripts/: demo_mvp.py
src/trading_strategy_framework/: __init__.py
src/trading_strategy_framework/backtesting/: __init__.py  engine.py
src/trading_strategy_framework/data/: __init__.py  fetcher.py  validator.py
src/trading_strategy_framework/strategies/: __init__.py  base.py  macd.py  rsi.py  simple_ma.py
src/trading_strategy_framework/utils/: __init__.py
tests/integration/: test_end_to_end.py  test_stage2_integration.py
tests/unit/: test_backtesting_engine.py  test_data_fetcher.py  test_data_validator.py  test_macd_strategy.py  test_rsi_strategy.py  test_simple_ma_strategy.py  test_strategy_base.py
